tests/errors/user-level-constraint.fil
import "primitives/core.fil";

comp Main<G: L-(G), L: 1>(
  go_K: interface[G],
  go_T: interface[L],
) -> () where L > G+1, G+5 > L {
  L := new Register[32];
  l0 := L<G, L>(10);
  l1 := L<G+5, G+7>(10);
}
